<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <!--  APPBAR  -->
    <com.google.android.material.appbar.AppBarLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar android:id="@+id/topAppBar" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:title="@string/editar_perfil" android:background="@color/rosita_fondoss_tarjetas_alertaslev" android:titleTextColor="@color/white" app:navigationIcon="@drawable/outline_arrow" app:titleCentered="true"/>
    </com.google.android.material.appbar.AppBarLayout>
    <!--  CONTENIDO  -->
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:paddingTop="?attr/actionBarSize">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="20dp">
            <!--  NOMBRE USUARIO  -->
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nombre_usuario" android:textStyle="bold" android:textSize="16sp"/>
            <EditText android:id="@+id/etUsername" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/introduce_nombre_usuario" android:padding="12dp" android:layout_marginBottom="16dp"/>
            <!--  CORREO  -->
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/correo_electronico" android:textStyle="bold" android:textSize="16sp"/>
            <EditText android:id="@+id/etEmail" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/introduce_correo" android:inputType="textEmailAddress" android:padding="12dp" android:layout_marginBottom="16dp"/>
            <!--  CONTRASEÑA  -->
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contrasena" android:textStyle="bold" android:textSize="16sp"/>
            <EditText android:id="@+id/etPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/nueva_contrasena" android:inputType="textPassword" android:padding="12dp" android:layout_marginBottom="24dp"/>
            <!--  BOTÓN GUARDAR  -->
            <Button android:id="@+id/btnGuardar" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/guardar_cambios" android:backgroundTint="@color/rosita_fondoss_tarjetas_alertaslev" android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>